src/scss/style.scss
/* ... */
.super-sticker {
  @include hover-background-effect() {
    border-radius: 10px;
  }
  
  /* &:nth-child(5n+5) {
    margin-right: 0;
  } */
  
  /* > img, > .rlottie {
    position: absolute;
    left: 0;
    top: 0;
    width: 100%;
    height: 100%;
  }

  > img {
    object-fit: contain;
    
    @include animation-level(2) {
      animation: fade-in-opacity .2s ease forwards;
    }
  } */
}

.fade-in-transition {
  opacity: 1;

  @include animation-level(2) {
    transition: opacity .2s ease-in-out;
  }
}

.show-more {
  padding-top: 13px;
  padding-bottom: 13px;
  cursor: pointer;
  user-select: none;
  position: relative;

  @include respond-to(not-handhelds) {
    padding-left: 8px;
  }

  .tgico-down {
    float: left;
    padding-right: 32px;
    padding-left: 16px;
    font-size: 24px;
    color: var(--secondary-text-color);
  }
}

// .message .audio .preloader-container {
// 	@include respond-to(handhelds) {
// 		width: 30px;
// 		height: 30px;
// 		left: 2px;
// 	}
// }

.content-empty {
  color: var(--secondary-text-color);
}

@keyframes grow-icon {
  0% {
    transform: scale(.5);
    opacity: .8;
  }

  50% {
    transform: scale(1.1);
    opacity: 1;
  }

  100% {
    transform: scale(1);
  }
}

@keyframes hide-icon {
  from {
    transform: scale(1);
    opacity: .4;
  }

  to {
    transform: scale(.5);
    opacity: 0;
  }
}

.popup-disable-password, .popup-skip-email {
  .popup-description {
    max-width: 284px;
  }
}

.grid {
  width: 100%;
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  grid-auto-rows: 1fr;
  grid-gap: .25rem;

  &-item {
    height: 0;
    padding-bottom: 100%;
    //overflow: hidden;
    position: relative;
    cursor: pointer;
    user-select: none;
    
    &-media {
      position: absolute;
      left: 0;
      top: 0;
      width: 100%;
      height: 100%;
      object-fit: cover;
    }
  }
}

.animated-super {
  &-row {
    --translateY: 100%;
    position: absolute;
    left: 0;
    top: 0;
    right: 0;
    bottom: 0;
    transition: transform var(--pm-transition), opacity var(--pm-transition);

    body.animation-level-0 & {
      transition: none;
    }

    /* &:not(.is-hiding) {
      transform: none !important;
    } */

    &.is-hiding {
      opacity: 0;

      &.from-top {
        transform: translate3d(0, calc(var(--translateY) * -1), 0);
        //transform: translateY(calc(var(--translateY) * -1));
        //transform: translateY(-100%);
      }

      &.from-bottom {
        transform: translate3d(0, var(--translateY), 0);
        //transform: translateY(var(--translateY));
        //transform: translateY(100%);
      }
      
      /* &.backwards {
        opacity: 1;
        transform: translateY(0) !important;
      } */
    }
  }
}

.animated-counter {
  display: inline-flex;

  &-decimal {
    position: relative;

    &-placeholder {
      color: transparent;
    }

    &-wrapper {
      position: absolute;
      left: 0;
      top: 0;
      bottom: 0;
      right: 0;
    }

    /* &:not(:first-child) {
      .animated-super {
        &-row {
          &.is-hiding {
            &.from-top {
              transform: translateY(100%);
            }
      
            &.from-bottom {
              transform: translateY(-100%);
            }
          }
        }
      }
    } */
  }

  /* &.from-top {
    .animated-super-row.is-hiding {
      &.from-top {
        transform: translateY(100%) !important;
      }
    }
  } */
}

// *:not(input):not(textarea) {
//   -webkit-user-select: none; /* disable selection/Copy of UIWebView */
//   -webkit-touch-callout: none; /* disable the IOS popup when long-press on a link */
// }   

middle-ellipsis-element {
  width: 100%;
	overflow: hidden;
	display: block;
}

.album-item {
  &-media {
    width: 100%;
    height: 100%;
  }
}

.hover-effect {
  @include hover-background-effect();
}

.progress-ring {
  position: absolute;
  top: 0;
  left: 0;
  pointer-events: none;

  &__circle {
    transition: stroke-dashoffset;
    stroke-linecap: round;
  }
}

.rlottie, .rlottie-vector {
  left: 0;
  top: 0;
  bottom: 0;
  right: 0;
  position: absolute;
  max-width: 100%;
  max-height: 100%;
  width: 100%;
  height: 100%;
}

.rlottie.fade-in {
  @include animation-level(2) {
    animation: fade-in-opacity .2s ease-in-out forwards;
  }
}

.rlottie-vector {
  fill: rgba(0, 0, 0, .08);
}

.media-photo, .media-video, .media-sticker, .media-round, .media-poster {
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;

  @include animation-level(2) {
    &.fade-in {
      animation: fade-in-opacity .2s ease-in-out forwards;
    }
  
    &.fade-out {
      animation: fade-out-opacity .2s ease-in-out forwards;
    }
  }
}

.media-photo.thumbnail {
  @include animation-level(2) {
    &.fade-in {
      animation: thumbnail-fade-in-opacity .2s ease-in-out forwards;
    }
  }
}

.media-video {
  z-index: 1; // * overflow media-photo
}

.media-sticker {
  margin: auto;
  object-fit: contain;
  width: 100%;
  height: 100%;
  max-width: 100%;
  max-height: 100%;
}

.media-round {
  max-width: var(--round-video-size);
  max-height: var(--round-video-size);
  z-index: 1;

  canvas {
    width: 100%;
    height: 100%;
    border-radius: 50%;
    position: relative;
  }

  .video-time {
    padding: 1px 6px 2px;
    background-color: var(--message-highlightning-color) !important;
  }

  &.is-paused .video-time {
    &:after {
      content: $tgico-nosound;
      padding-left: .25rem;
      display: flex;
      align-items: center;
      font-size: 1.125rem;
    }
  }
}

.gradient-delimiter {
  width: 100%;
  height: .75rem;
  background-color: var(--background-color-true);
  position: relative;

  &:before {
    content: " ";
    position: absolute;
    left: 0;
    top: 0;
    right: 0;
    bottom: 0;
    background: linear-gradient(180deg, rgba(0, 0, 0, .06) 0%, rgba(0, 0, 0, 0) 20%, rgba(0, 0, 0, 0) 94%, rgba(0, 0, 0, .06) 100%);
  }
}
/* ... */

